ADD: queue size & last processed block to ping response
