# openapi.yaml
@@ -2,7 +2,7 @@ openapi: 3.0.0
 info:
   title: GroundControl push server API
   description: Push notifications server for BlueWallet
-  version: 0.0.10
+  version: 0.0.11
 servers:
   - url: http://localhost:3001
   - url: https://groundcontrol-bluewallet-stg.herokuapp.com
@@ -147,6 +147,10 @@ components:
         version:
           type: "string"
         uptime:
+          type: "number"
+        last_processed_block:
+          type: "number"
+        send_queue_size:
           type: "number"
 
     NotificationLevel:
