# src/controller/GroundController.ts
@@ -6,12 +6,15 @@ import { TokenToHash } from "../entity/TokenToHash";
 import { TokenToTxid } from "../entity/TokenToTxid";
 import { TokenConfiguration } from "../entity/TokenConfiguration";
 import { SendQueue } from "../entity/SendQueue";
+import { KeyValue } from "../entity/KeyValue";
 require("dotenv").config();
 const pck = require("../../package.json");
 if (!process.env.JAWSDB_MARIA_URL || !process.env.FCM_SERVER_KEY || !process.env.APNS_PEM) {
   console.error("not all env variables set");
   process.exit();
 }
+
+const LAST_PROCESSED_BLOCK = "LAST_PROCESSED_BLOCK";
 
 export class GroundController {
   private tokenToAddressRepository = getRepository(TokenToAddress);
@@ -171,10 +174,18 @@ export class GroundController {
   }
 
   async ping(request: Request, response: Response, next: NextFunction) {
+    const keyValueRepository = getRepository(KeyValue);
+    const sendQueueRepository = getRepository(SendQueue);
+    const keyVal = await keyValueRepository.findOne({ key: LAST_PROCESSED_BLOCK });
+    const send_queue_size = await sendQueueRepository.count();
+
     const serverInfo: Paths.Ping.Get.Responses.$200 = {
+      name: pck.name,
       description: pck.description,
       version: pck.version,
       uptime: Math.floor(process.uptime()),
+      last_processed_block: +keyVal.value,
+      send_queue_size,
     };
 
     return serverInfo;
